--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -32,6 +32,14 @@ h1,h2,h3,h4,h5,h6 {
 	margin: 0px;
 }
 
+.visually-hidden {
+	
+  visibility: hidden;
+  
+  
+
+}
+
 ul.social-icons li {
 	display: inline-block;
 	margin-right: 3px;
